[package]
name = "slackgpt-rs"
version = "0.1.0"
edition = "2021"


default = []
hyper = ["dep:tokio","dep:hyper", "dep:hyper-rustls", "dep:tokio-stream","dep:tokio-tungstenite", "dep:tokio-tungstenite", "dep:signal-hook", "dep:signal-hook-tokio"]

[dependencies]
chatgpt-rs = { path = "../chatgpt-rs"}
slack-morphism = { version = "1.4.0", features = ["hyper"] }
tokio = { version = "1.20", features = ["full"] }
http = "0.2"
hyper = { version ="0.14", features = ["full"] }
rsb_derive = "0.5.1"
once_cell = "1.16"
